deploiement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: my-api-namespace
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo-container
          image: registry.cluster.wik.cloud/public/echo
          ports:
          - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
