service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: my-api-namespace
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
